--- a/public/Index.html
+++ b/public/Index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name = "viewport" content="width=device-width, initial-scale=1">
-        <title>Expnsify</title>
+        <title>Expensify</title>
         <body>
             <div id ="app"></div>
             <script src="/bundle.js"></script>
